@@ -1471,11 +1471,11 @@ struct City_Base_vtable
 //  int (__thiscall *m14)(int, int);
   void *m14;
   enum UnitStateType (__fastcall * instruct_worker) (City * this, __, int tile_x, int tile_y, byte param_3, Unit * worker);
-  int m16;
+  int (__fastcall * find_best_tile_to_work) (City * this, __, Unit * worker, bool param_2);
   int m17;
   int m18;
   int m19;
-  int m20;
+  void (__fastcall * set_production_to_most_expensive_option) (City *);
   int m21;
   int m22;
   int m23;
