@@ -125,6 +125,10 @@ enable_pop_unit_ai = true
 ; or even 0. Setting this option >= 3 will result in base game behavior. The purpose of reducing the limit is to free up the AI's naval power units.
 max_ai_naval_escorts = 3
 
+; This controls how many workers the AI feels it needs as a percentage of the base amount. For example, if set to 150 (the default), the AI will build
+; about 50% more workers than normal. Set to 100 for base game behavior.
+ai_worker_requirement_percent = 150
+
 [=================]
 [=== BUG FIXES ===]
 [=================]
